--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
 .cakeImg {
   max-height: 30rem;
   max-width: 30rem;
+  max-width: 100vw;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .weddingBody {
