--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.cakeImg {
+  max-height: 30rem;
+  max-width: 30rem;
+}
+
+.weddingBody {
+  /* margin-top: var(--default-padding); */
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* gap: var(--default-padding); */
+  gap: var(--default-gap);
+  margin-bottom: var(--default-padding);
 }
