--- a/src/Faq/Faq.css
+++ b/src/Faq/Faq.css
@@ -62,6 +62,7 @@
     display: flex;
     flex-direction: row;
     gap: var(--default-gap);
+    flex-wrap: wrap;
 }
 
 .faqAnswerText {
@@ -70,4 +71,11 @@
 
 .faqQuestion {
     font-weight: bold;
+}
+
+.faqLoader {
+    border-color: var(--clr-lavender) !important;
+    border-bottom-color: transparent !important;
+    position: absolute;
+    position: fixed !important;
 }
