--- a/src/Faq/Faq.css
+++ b/src/Faq/Faq.css
@@ -12,6 +12,7 @@
     gap: var(--default-gap);
     /* background-color: #fafafa; */
     padding: var(--default-gap) 0px;
+    padding-top: 0px;
     align-items: center;
     justify-content: space-between;
     border-bottom: solid 2px #bbbbbb;
@@ -36,9 +37,11 @@
 
 .questionForm.closed {
     max-height: 0px;
+    overflow: hidden;
 }
 
 .questionForm.open {
+    overflow: visible;
     /* max-height: 10rem; */
     max-height: 70vh;
     /* height: max-content; */
@@ -86,6 +89,12 @@
     /* gap: var(--default-gap); */
     flex-direction: row;
     /* flex-wrap: wrap; */
+}
+
+@media(max-width: 768px) {
+    .faqQuestion, .faqAnswer {
+        font-size: .8rem;
+    }
 }
 
 @media(max-width: 425px) {
