--- a/src/page_art/question/question.css
+++ b/src/page_art/question/question.css
@@ -100,6 +100,10 @@
     top: 72%;
 }
 
+.centerProng.spinning {
+    background: var(--clr-secondary);
+}
+
 .leftProng {
     transform: rotate(15deg);
     right: 52%;
