--- a/src/page_art/clock/clock.css
+++ b/src/page_art/clock/clock.css
@@ -5,6 +5,13 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+
+    transition-delay: 3s;
+    transition: all 1.5s;
+}
+
+.clockContainer.fading {
+    opacity: 0;
 }
 
 .clockContainer.small .clockOuterRing::after {
@@ -23,6 +30,7 @@
     height: 4%;
     width: 19%;
     position: relative;
+    margin-bottom: -1%;
 }
 
 .clockDiamondTop::before, .clockDiamondTop::after {
@@ -34,12 +42,12 @@
 }
 
 .clockDiamondTop::before {
-    left: -89%;
+    left: -93%;
     transform: rotate(-45deg);
 }
 
 .clockDiamondTop::after {
-    right: -89%;
+    right: -93%;
     transform: rotate(45deg);
 }
 
@@ -108,9 +116,34 @@
 }
 
 .clockSmallHand {
-    height: 20%;
+    height: 40%;
+    z-index: 1;
+}
+
+.clockSmallHand::after, .clockBigHand::after {
+    position: absolute;
+    content: '';
+    background-color: white;
+    height: 50%;
+    width: 144%;
+    top: 52.5%;
+    left: -26%;
+}
+
+.clockSmallHand::after {
+    z-index: 0;
 }
 
 .clockBigHand {
-    height: 40%;
+    height: 80%;
+    z-index: 2;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
