--- a/src/Components/CuvierClub/CuvierClub.css
+++ b/src/Components/CuvierClub/CuvierClub.css
@@ -14,6 +14,6 @@
 
 .cuvierClubHistory {
     /* padding: 0 var(--default-gap); */
-    margin: 0 2rem;
+    /* margin: 0 2rem; */
     max-width: -webkit-fill-available;
 }
