--- a/src/Faq/Faq.css
+++ b/src/Faq/Faq.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: var(--default-gap);
-    padding: 0 var(--default-padding);
-    width: -webkit-fill-available;
+    /* padding: 0 var(--default-padding); */
+    /* width: -webkit-fill-available; */
 }
 
 .faqItem {
@@ -16,13 +16,15 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: solid 2px #bbbbbb;
+    flex-wrap: wrap;
 }
 
 .faqBody {
     display: flex;
     flex-direction: column;
     gap: var(--default-gap);
-    flex: 1 1 auto;
+    /* flex: 1 1 auto; */
+    flex: 1;
 }
 
 .questionForm {
