--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   background-color: white;
 }
 
+.MuiDialogActions-root {
+  justify-content: space-around !important;
+}
+
 h1 {
   text-align: center;
 }
@@ -31,6 +35,17 @@ code {
   /* justify-content: center; */
   gap: var(--default-gap);
   margin-bottom: var(--default-padding);
+  padding: 0 var(--default-padding);
+  overflow: hidden;
+}
+
+.weddingBody img {
+  max-width: 100%;
+}
+
+.sanDiegoTitle {
+  font-weight: 600; 
+  font-size: 3rem;
 }
 
 @media(max-width: 768px) {
