--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   font-weight: 60;
 }
 
+.text-center {
+  text-align: center;
+  flex: 1 1 auto;
+}
+
 .logisticsText {
   font-size: 2.5rem;
   font-weight: 600;
