--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,21 @@ code {
     font-size: .9rem;
   }
 }
+
+@media(max-width: 1024px) {
+  #wedding-parties-image-list {
+    grid-template-columns: repeat(4, 1fr) !important;
+  }
+}
+
+@media(max-width: 768px) {
+  #wedding-parties-image-list {
+    grid-template-columns: repeat(3, 1fr) !important;
+  }
+}
+
+@media(max-width: 425px) {
+  #wedding-parties-image-list {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+}
