--- a/src/page_art/cake/cake.css
+++ b/src/page_art/cake/cake.css
@@ -5,6 +5,12 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    transition: opacity .3s;
+}
+
+.cakeContainer.fadeOut {
+    opacity: 0;
+    transition: height .3s;
 }
 
 .cakeContainer.small {
