--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,10 @@ a {
   .logisticsText {
     font-size: 2rem;
   }
+
+  .logisticsAccordionSummary {
+    font-size: 1.3rem;
+  }
 }
 
 @media (max-width: 425px) {
@@ -418,5 +422,19 @@ a {
 
   .summaryItemLocation {
     font-size: .8rem;
+  }
+
+  .logisticsAccordionSummary {
+    font-size: 1rem;
+  }
+
+  .logisticsItem {
+    font-size: .8rem;
+  }
+  
+  .logisticsAccordion {
+    display: flex;
+    flex-direction: column;
+    gap: var(--default-gap);
   }
 }
