--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@
 .logisticsAccordionSummary {
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.5rem;
+  display: flex !important;
+  justify-content: flex-start !important;
+  gap: var(--default-gap) !important;
+}
+
+.logisticsAccordionSummary .MuiAccordionSummary-content {
+  flex: 0 0 auto;
 }
 
 .summaryItemHeading {
@@ -439,11 +446,7 @@ a {
     font-size: .8rem;
   }
   
-  .logisticsAccordion {
-    display: flex;
-    flex-direction: column;
-    gap: var(--default-gap);
-  }
+
 
   .summaryItemLocation {
     gap: 0px;
