--- a/src/Components/BobsBurger/BobsBurger.css
+++ b/src/Components/BobsBurger/BobsBurger.css
@@ -50,3 +50,9 @@
     color: white !important;
     font-size: 2.5rem !important;
 }
+
+.bobsBurgerTitle {
+    color: white;
+    font-weight: 600;
+    flex: 1 1 auto;
+}
