much needed gallery updates, consistency for mobile usage and text behavior, faq form fields, photo dialog loading spinner, hard-coded gallery routes

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   --clr-secondary: #a7b69d;
 }
 
+.addPhotoLoader {
+  height: 15rem !important;
+  width: 15rem !important;
+  color: var(--clr-lavender);
+  border-width: 4px !important;
+}
+
 .transitAccordion {
   align-items: baseline !important;
 }
@@ -16,6 +23,12 @@
   display: flex !important;
   justify-content: flex-start !important;
   gap: var(--default-gap) !important;
+}
+
+.addPhotosDialogButton {
+  flex: 0 0 32%;
+  height: 20rem !important;
+  /* padding: var(--default-padding) !important; */
 }
 
 .logisticsAccordionSummary .MuiAccordionSummary-content {
@@ -102,6 +115,11 @@
 .text-center {
   text-align: center;
   flex: 1 1 auto;
+}
+
+.errorMessage {
+  font-size: .8rem;
+  color: #d32f2f;
 }
 
 .logisticsText {
@@ -455,11 +473,10 @@ a {
   .logisticsAccordionSummary .MuiAccordionSummary-content {
     font-size: .8rem;
   }
-  
 
-
-  .summaryItemLocation {
-    /* gap: 0px; */
+  .addPhotosDialogButton {
+    flex: 1 1 auto;
+    height: 5rem !important;
+    /* padding: var(--default-padding) !important; */
   }
-
 }
