--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -68,7 +68,7 @@
 }
 
 .dialogImage {
-    height: 25rem;
+    height: 20rem;
     background-size: cover !important;
     background-position: center !important;
     display: flex;
@@ -93,7 +93,7 @@
     position: absolute !important;
     top: var(--default-gap);
     right: var(--default-gap);
-    background: rgba(255,255,255, .6) !important;
+    background: rgba(255,255,255, .85) !important;
 }
 
 .addNewImage {
@@ -164,8 +164,14 @@
 }
 
 .galleryText {
-    font-family:'Times New Roman', Times, serif;
-    font-size: 1rem;
+    /* font-family:'Times New Roman', Times, serif; */
+    /* font-size: 1rem; */
+    font-size: 1.3rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
+    display: flex;
+    gap: var(--default-gap);
+    align-items: center;
 }
 
 .adminGalleryContainer {
