--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@
   --clr-secondary: #a7b69d;
 }
 
+.textCopy {
+  cursor: pointer;
+  transition: all .2s;
+  border-radius: 1rem;
+}
+
+.textCopy:hover {
+  background: #fafafa;
+}
+
 .addPhotoLoader {
   height: 15rem !important;
   width: 15rem !important;
