Search function on RSVP works for full names, groups component is a little less-buggy

--- a/src/Components/Groups/Groups.css
+++ b/src/Components/Groups/Groups.css
@@ -1,3 +1,9 @@
+.bigClip {
+    width: 100px !important;
+    height: 100px !important;
+    border-color: var(--clr-lavender) var(--clr-lavender) transparent !important;
+}
+
 .groupsContainer {
     display: grid;
     grid-template-columns: auto auto auto;
