Fixed bug without rerender on new group create, added filter

--- a/src/Components/Groups/Groups.css
+++ b/src/Components/Groups/Groups.css
@@ -4,6 +4,12 @@
     border-color: var(--clr-lavender) var(--clr-lavender) transparent !important;
 }
 
+.filterOption.selected {
+    background: var(--clr-lavender);
+    color: white;
+    font-weight: 600;
+}
+
 .groupsContainer {
     display: grid;
     grid-template-columns: auto auto auto;
